--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <h3><a href="./public/bithday-invite-gerardo-recio.html">Birthday Invite Project</a></h3>
  <img src="./assets/images/birthday-invite-gerardo-recio.png" alt="birthday invite screenshot" height="200" />
  <hr/>
- <a href="./public/about.html">About Me</a>
+ <a href="./public/about gerardo-recio.html">About Me</a>
  <a href="./public/contact gerardo-recio.html">Contact Me</a>
 
 </body>
